# micro-aevol

./: .gitignore  AeTime.cpp  AeTime.h  Algorithms.cu  Algorithms.cuh  Algorithms.h  CMakeLists.txt  Dna.cpp  Dna.h  DnaMutator.cpp  DnaMutator.h  ExpManager.cpp  ExpManager.h  GPUDna.cuh  Gaussian.h  MutationEvent.cpp  MutationEvent.h  Organism.cpp  Organism.h  Promoter.h  Protein.h  README.md  RNA.h  Stats.cpp  Stats.h  Threefry.cpp  Threefry.h  ThreefryGPU.cu  ThreefryGPU.h  Timetracer.h  main.cpp
backup/: backup_1000.zae  backup_2000.zae
presentation/: slides.tex
presentation/figs/: workflow.dia  workflow_1.dia  workflow_2.dia  workflow_3.dia  workflow_4.dia  workflow_5.dia  workflow_6.dia  workflow_7.dia  workflow_8.dia  workflow_9.dia
stats/: stats_simd_best.csv  stats_simd_mean.csv
